# UnixLabs

lab1/: script.sh
lab2/: main.cpp  program
lab3/: client  client.c  server  server.c
lab4/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.ac  program  program.c
lab4/.deps/: program.Po
lab4/autom4te.cache/: output.1  requests  traces.0  traces.1
lab5/server/: Dockerfile  index.html  index.js
